Cleaner Code script & index files updated
unnecessary codes where the app displays numbers have been removed and now the part has cleaner codes

--- a/index.html
+++ b/index.html
@@ -41,23 +41,23 @@
                     <div id="btn19" class="c">x^3</div>
                     <div id="btn20" class="c divide">÷</div>
                     <div id="btn21" class="c">x^2</div>
-                    <div id="btn22" class="c n">7</div>
-                    <div id="btn23" class="c n">8</div>
-                    <div id="btn24" class="c n">9</div>
+                    <div id="btn22" class="c n main-number">7</div>
+                    <div id="btn23" class="c n main-number">8</div>
+                    <div id="btn24" class="c n main-number">9</div>
                     <div id="btn25" class="c multiple">×</div>
                     <div id="btn26" class="c">±</div>
-                    <div id="btn27" class="c n">4</div>
-                    <div id="btn28" class="c n">5</div>
-                    <div id="btn29" class="c n">6</div>
+                    <div id="btn27" class="c n main-number">4</div>
+                    <div id="btn28" class="c n main-number">5</div>
+                    <div id="btn29" class="c n main-number">6</div>
                     <div id="btn30" class="c minus">-</div>
                     <div id="btn31" class="c">(</div>
-                    <div id="btn32" class="c n">1</div>
-                    <div id="btn33" class="c n">2</div>
-                    <div id="btn34" class="c n">3</div>
+                    <div id="btn32" class="c n main-number">1</div>
+                    <div id="btn33" class="c n main-number">2</div>
+                    <div id="btn34" class="c n main-number">3</div>
                     <div id="btn35" class="c plus">+</div>
                     <div id="btn36" class="c">)</div>
                     <div id="btn37" class="c">.</div>
-                    <div id="btn38" class="c n">0</div>
+                    <div id="btn38" class="c n main-number">0</div>
                     <div id="btn39" class="c c39">=</div>
                     <!-- <div id="btn40" class="c">c</div> -->
             </div>
