--- a/index.html
+++ b/index.html
@@ -27,36 +27,36 @@
             <div id="btn6" class="c">c</div>
             <div id="btn7" class="c back">
                 <<</div>
-                    <div id="btn8" class="c">sin</div>
-                    <div id="btn9" class="c">cos</div>
-                    <div id="btn10" class="c">tan</div>
-                    <div id="btn11" class="c">√</div>
-                    <div id="btn12" class="c">abs</div>
-                    <div id="btn13" class="c">log</div>
-                    <div id="btn14" class="c">exp</div>
-                    <div id="btn15" class="c">%</div>
-                    <div id="btn16" class="c">n!</div>
-                    <div id="btn17" class="c">1/x</div>
+                    <div id="btn8" class="sin c advanced-math">sin</div>
+                    <div id="btn9" class="cos c advanced-math">cos</div>
+                    <div id="btn10" class="tan c advanced-math">tan</div>
+                    <div id="btn11" class="rad c advanced-math">√</div>
+                    <div id="btn12" class="abs c advanced-math">abs</div>
+                    <div id="btn13" class="log c advanced-math">log</div>
+                    <div id="btn14" class="exp c advanced-math">exp</div>
+                    <div id="btn15" class="c simple-math">%</div>
+                    <div id="btn16" class="c simple-math">n!</div>
+                    <div id="btn17" class="c simple-math">1/x</div>
                     <div id="btn18" class="c">π</div>
-                    <div id="btn19" class="c">x^3</div>
-                    <div id="btn20" class="c divide">÷</div>
-                    <div id="btn21" class="c">x^2</div>
+                    <div id="btn19" class="c simple-math">x^3</div>
+                    <div id="btn20" class="c divide simple-math">÷</div>
+                    <div id="btn21" class="c simple-math">x^2</div>
                     <div id="btn22" class="c n main-number">7</div>
                     <div id="btn23" class="c n main-number">8</div>
                     <div id="btn24" class="c n main-number">9</div>
-                    <div id="btn25" class="c multiple">×</div>
-                    <div id="btn26" class="c">±</div>
+                    <div id="btn25" class="c multiple simple-math">×</div>
+                    <div id="btn26" class="c simple-math">±</div>
                     <div id="btn27" class="c n main-number">4</div>
                     <div id="btn28" class="c n main-number">5</div>
                     <div id="btn29" class="c n main-number">6</div>
-                    <div id="btn30" class="c minus">-</div>
-                    <div id="btn31" class="c">(</div>
+                    <div id="btn30" class="c minus simple-math">-</div>
+                    <div id="btn31" class="c simple-math">(</div>
                     <div id="btn32" class="c n main-number">1</div>
                     <div id="btn33" class="c n main-number">2</div>
                     <div id="btn34" class="c n main-number">3</div>
-                    <div id="btn35" class="c plus">+</div>
-                    <div id="btn36" class="c">)</div>
-                    <div id="btn37" class="c">.</div>
+                    <div id="btn35" class="c plus simple-math">+</div>
+                    <div id="btn36" class="c simple-math">)</div>
+                    <div id="btn37" class="c simple-math">.</div>
                     <div id="btn38" class="c n main-number">0</div>
                     <div id="btn39" class="c c39">=</div>
                     <!-- <div id="btn40" class="c">c</div> -->
